[gd_scene load_steps=6 format=2]

[ext_resource path="res://audio/player_step1.ogg" type="AudioStream" id=1]
[ext_resource path="res://audio/swim.ogg" type="AudioStream" id=2]
[ext_resource path="res://audio/leave_water.ogg" type="AudioStream" id=3]
[ext_resource path="res://audio/splash.ogg" type="AudioStream" id=4]
[ext_resource path="res://objects/geometry/Player.gd" type="Script" id=5]

[node name="Player" type="Spatial"]
script = ExtResource( 5 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -0.1 )
current = true

[node name="Audio_Step" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 1 )
pitch_scale = 0.75
bus = "SFX"

[node name="Audio_Swim" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 2 )
unit_size = 0.5
bus = "SFX"

[node name="Audio_Splash" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 4 )
unit_size = 0.5
bus = "SFX"

[node name="Audio_LeaveWater" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 3 )
unit_size = 0.5
bus = "SFX"

[node name="Tween" type="Tween" parent="."]
